salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/LastCommunicationDateTime__c.field-meta.xml
<CustomField>
    <fullName>LastCommunicationDateTime__c</fullName>
    <label>Last Communication Date/Time</label>
    <type>DateTime</type>
</CustomField>