salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/LastCustomerEmail__c.field-meta.xml
<CustomField>
    <fullName>LastCustomerEmail__c</fullName>
    <label>Last Customer Email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>