salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/LastExternalComment__c.field-meta.xml
<CustomField>
    <fullName>LastExternalComment__c</fullName>
    <label>Last External Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>