salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/LastInternalComment__c.field-meta.xml
<CustomField>
    <fullName>LastInternalComment__c</fullName>
    <label>Last Internal Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>