salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/LastStatus__c.field-meta.xml
<CustomField>
    <fullName>LastStatus__c</fullName>
    <label>Last Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>