salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/LicenseOwnerInformation__c.field-meta.xml
<CustomField>
    <fullName>LicenseOwnerInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please enter the contact information of the license owner if other than yourself</inlineHelpText>
    <label>License Owner Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LicenseOwners</relationshipLabel>
    <relationshipName>LicenseOwners</relationshipName>
    <type>Lookup</type>
</CustomField>