salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/MeetingRequested__c.field-meta.xml
<CustomField>
    <fullName>MeetingRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Checkbox is used to check when the Request Meeting from customer is sent</description>
    <label>Meeting Requested</label>
    <type>Checkbox</type>
</CustomField>