salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/MilestoneTargetTime__c.field-meta.xml
<CustomField>
    <fullName>MilestoneTargetTime__c</fullName>
    <description>This field is used to get the milestone target time related to the Case</description>
    <label>Milestone Target Time</label>
    <type>DateTime</type>
</CustomField>