salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/MoreThan14Days__c.field-meta.xml
<CustomField>
    <fullName>MoreThan14Days__c</fullName>
    <formula>IF(AND( CreatedDate &lt;NOW(),CreatedDate&gt;(NOW()-14)) ,1,0)</formula>
    <label>More than 14 days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>