salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/MyCasesFilter__c.field-meta.xml
<CustomField>
    <fullName>MyCasesFilter__c</fullName>
    <description>This field is used as  filter condition in My cases and My open Cases</description>
    <formula>IF(ContactId == null,&#39;No&#39;,IF(ContactId = $User.ContactId,&#39;Yes&#39;, IF (OwnerId = $User.Id,&#39;Yes&#39;,&#39;No&#39;)))</formula>
    <label>My Cases Filter</label>
    <type>Text</type>
</CustomField>