salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/MyProfile__c.field-meta.xml
<CustomField>
    <fullName>MyProfile__c</fullName>
    <label>My Profile</label>
    <type>Url</type>
</CustomField>