salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/NetSuiteCaseID__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteCaseID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>NetSuite Case ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>