salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/NetSuiteCaseLink__c.field-meta.xml
<CustomField>
    <fullName>NetSuiteCaseLink__c</fullName>
    <formula>HYPERLINK(&quot;https://system.netsuite.com/app/crm/support/supportcase.nl?id=&quot; &amp; NetSuiteCaseID__c, NetSuiteCaseID__c)</formula>
    <label>NetSuite Case Link</label>
    <type>Text</type>
</CustomField>