salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/NextCommunicationDate__c.field-meta.xml
<CustomField>
    <fullName>NextCommunicationDate__c</fullName>
    <label>Next Communication Date</label>
    <type>DateTime</type>
</CustomField>