salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/NotifyCaseOwner__c.field-meta.xml
<CustomField>
    <fullName>NotifyCaseOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Case Owner</label>
    <type>Checkbox</type>
</CustomField>