salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/NotReOpenCase__c.field-meta.xml
<CustomField>
    <fullName>NotReOpenCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Re-Open Case?</label>
    <type>Checkbox</type>
</CustomField>