salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/OldCaseId__c.field-meta.xml
<CustomField>
    <fullName>OldCaseId__c</fullName>
    <label>Old Case Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>