salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/OldCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>OldCaseNumber__c</fullName>
    <externalId>true</externalId>
    <label>Old Case Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>