salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/OldCaseThreadId__c.field-meta.xml
<CustomField>
    <fullName>OldCaseThreadId__c</fullName>
    <formula>&quot;ref:_&quot; &amp; LEFT(&#39;00D30000000mfKb&#39;,5) &amp; RIGHT(&#39;00D30000000mfKb&#39;,4) &amp; &quot;._&quot; &amp; LEFT( Left(OldCaseId__c,15) ,5) &amp; SUBSTITUTE(Left(RIGHT(Left(OldCaseId__c,15),10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Left(OldCaseId__c,15),5) &amp; &quot;:ref&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Case Thread Id</label>
    <type>Text</type>
</CustomField>