salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/OnceHubMeetingScheduled__c.field-meta.xml
<CustomField>
    <fullName>OnceHubMeetingScheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Once Hub Meeting Scheduled?</label>
    <type>Checkbox</type>
</CustomField>