salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/OpenOrCloseDate__c.field-meta.xml
<CustomField>
    <fullName>OpenOrCloseDate__c</fullName>
    <formula>NULLVALUE(ClosedDate, CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OpenOrCloseDate</label>
    <type>Date</type>
</CustomField>