salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/OwnerOnceHubID__c.field-meta.xml
<CustomField>
    <fullName>OwnerOnceHubID__c</fullName>
    <formula>IF( ISBLANK(Owner:User.Id), &#39;&#39;, Owner:User.OnceHub_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner OnceHubID</label>
    <type>Text</type>
</CustomField>