salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Potential_Knowledge_Article__c.field-meta.xml
<CustomField>
    <fullName>Potential_Knowledge_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Potential Knowledge Article</label>
    <type>Checkbox</type>
</CustomField>