salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/PreferredContactMethod__c.field-meta.xml
<CustomField>
    <fullName>PreferredContactMethod__c</fullName>
    <label>Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>