salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/PreSalesHold__c.field-meta.xml
<CustomField>
    <fullName>PreSalesHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Sales Hold</label>
    <type>Checkbox</type>
</CustomField>