salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AppSpider</fullName>
            </value>
            <value>
                <fullName>Insight</fullName>
            </value>
            <value>
                <fullName>Komand</fullName>
            </value>
            <value>
                <fullName>LANGuardian</fullName>
            </value>
            <value>
                <fullName>Log Entries</fullName>
            </value>
            <value>
                <fullName>Managed Application Security (MAS)</fullName>
            </value>
            <value>
                <fullName>Managed Detection Response (MDR)</fullName>
            </value>
            <value>
                <fullName>Managed Vulnerability Management (MVM)</fullName>
            </value>
            <value>
                <fullName>Metasploit</fullName>
            </value>
            <value>
                <fullName>Nexpose</fullName>
            </value>
            <value>
                <fullName>PSS</fullName>
            </value>
            <value>
                <fullName>ControlsInsight</fullName>
                <isActive>false</isActive>
                <label>ControlsInsight</label>
            </value>
            <value>
                <fullName>Default Self Service</fullName>
                <isActive>false</isActive>
                <label>Default Self Service</label>
            </value>
            <value>
                <fullName>InsightVM</fullName>
                <isActive>false</isActive>
                <label>InsightVM</label>
            </value>
            <value>
                <fullName>Mobilisafe</fullName>
                <isActive>false</isActive>
                <label>Mobilisafe</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>tCell</fullName>
                <isActive>true</isActive>
                <label>tCell</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>