salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ProductKey__c.field-meta.xml
<CustomField>
    <fullName>ProductKey__c</fullName>
    <label>Product Key</label>
    <length>25</length>
    <type>Text</type>
</CustomField>