salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ReassigntoSupport__c.field-meta.xml
<CustomField>
    <fullName>ReassigntoSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field created for APPS-1356 and APPS-2278.</description>
    <label>Reassign to Support</label>
    <type>Checkbox</type>
</CustomField>