salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Related_Issue__c.field-meta.xml
<CustomField>
    <fullName>Related_Issue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Issue</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipLabel>Cases Related to this Issue</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>