salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/RelatedIssueAbstract__c.field-meta.xml
<CustomField>
    <fullName>RelatedIssueAbstract__c</fullName>
    <label>Related Issue Abstract</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>