salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/RelatedIssueFixedEmailStatus__c.field-meta.xml
<CustomField>
    <fullName>RelatedIssueFixedEmailStatus__c</fullName>
    <label>Related Issue Fixed Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Should send only</fullName>
            </value>
            <value>
                <fullName>Should send and close</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>