salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/RelatedIssueSentEmailDate__c.field-meta.xml
<CustomField>
    <fullName>RelatedIssueSentEmailDate__c</fullName>
    <label>Related Issue Sent Email Date</label>
    <type>DateTime</type>
</CustomField>