salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Reproducible__c.field-meta.xml
<CustomField>
    <fullName>Reproducible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reproducible</label>
    <type>Checkbox</type>
</CustomField>