salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/rvpe__NotifyRVMember__c.field-meta.xml
<CustomField>
    <fullName>rvpe__NotifyRVMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify RV Member</label>
    <type>Checkbox</type>
</CustomField>