salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/rvpe__RVAccount__c.field-meta.xml
<CustomField>
    <fullName>rvpe__RVAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RV Account</label>
    <referenceTo>rvpe__RVAccount__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>