salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/rvpe__RVMember__c.field-meta.xml
<CustomField>
    <fullName>rvpe__RVMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RV Member</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>$Source.rvpe__RVAccount__c</field>
            <operation>equals</operation>
            <valueField>rvpe__RVMember__c.rvpe__RVAccount__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.rvpe__RVAccount__c</field>
            <operation>equals</operation>
            <value/>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>rvpe__RVMember__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>