salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SendCaseCreationNotification__c.field-meta.xml
<CustomField>
    <fullName>SendCaseCreationNotification__c</fullName>
    <label>Send CaseCreation Notification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Send Now</fullName>
            </value>
            <value>
                <fullName>No Need</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>