salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <label>Serial Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>