salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ServiceBreachTime__c.field-meta.xml
<CustomField>
    <fullName>ServiceBreachTime__c</fullName>
    <formula>CASE(TEXT(Status),&#39;Closed&#39;, NULL,
   &#39;Waiting on Customer&#39;, NULL,
   IF(ISNULL(MilestoneTargetTime__c),  
      NULL,
      FLOOR((MilestoneTargetTime__c - NOW())*24*60)
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Breach Time (in Mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>