salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Sev1HistoricalFlag__c.field-meta.xml
<CustomField>
    <fullName>Sev1HistoricalFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sev 1 Historical Flag</label>
    <type>Checkbox</type>
</CustomField>