salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Sev1Identifier__c.field-meta.xml
<CustomField>
    <fullName>Sev1Identifier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies whether a Case has ever been in a Sev1 state.</description>
    <label>Sev1 Identifier</label>
    <type>Checkbox</type>
</CustomField>