salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ShowFlashImage__c.field-meta.xml
<CustomField>
    <fullName>ShowFlashImage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to check Flash Image. Do not add on page layout</description>
    <label>ShowFlashImage</label>
    <type>Checkbox</type>
</CustomField>