salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SINumber__c.field-meta.xml
<CustomField>
    <fullName>SINumber__c</fullName>
    <label>Jira Number</label>
    <type>TextArea</type>
</CustomField>