salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/StepsToReproduce__c.field-meta.xml
<CustomField>
    <fullName>StepsToReproduce__c</fullName>
    <label>Steps to Reproduce</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>