salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SubCheckBoxes__c.field-meta.xml
<CustomField>
    <fullName>SubCheckBoxes__c</fullName>
    <label>Sub-check boxes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No business impact</fullName>
            </value>
            <value>
                <fullName>No logs / enhanced logs</fullName>
            </value>
            <value>
                <fullName>Not enough explanation of issue or steps undertaken</fullName>
            </value>
            <value>
                <fullName>No escalation to backline queue</fullName>
            </value>
            <value>
                <fullName>Provided incorrect info</fullName>
            </value>
            <value>
                <fullName>Missed basics in troubleshooting</fullName>
            </value>
            <value>
                <fullName>No contact on case</fullName>
            </value>
            <value>
                <fullName>Rockstar Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>