salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SuperSupport__c.field-meta.xml
<CustomField>
    <fullName>SuperSupport__c</fullName>
    <formula>IF( Account.Super_Support_Customer__c = TRUE , IMAGE(&quot;/resource/SuperSupportLogo&quot;, &quot;Super Support&quot;, 32, 32), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Super Support</label>
    <type>Text</type>
</CustomField>