salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SupportRepNameForSurvey__c.field-meta.xml
<CustomField>
    <fullName>SupportRepNameForSurvey__c</fullName>
    <formula>Owner:User.LastName</formula>
    <label>Support Rep Name for Survey</label>
    <type>Text</type>
</CustomField>