salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SupportSurvey__c.field-meta.xml
<CustomField>
    <fullName>SupportSurvey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Survey</label>
    <referenceTo>SupportSurvey__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>