salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SurveyElegibility__c.field-meta.xml
<CustomField>
    <fullName>SurveyElegibility__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Survey Elegibility</label>
    <type>Checkbox</type>
</CustomField>