salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SurveySentDate__c.field-meta.xml
<CustomField>
    <fullName>SurveySentDate__c</fullName>
    <label>Survey Sent Date</label>
    <type>DateTime</type>
</CustomField>