salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/SustainingSurveySent__c.field-meta.xml
<CustomField>
    <fullName>SustainingSurveySent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sustaining Survey Sent</label>
    <type>Checkbox</type>
</CustomField>