salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Sync__c.field-meta.xml
<CustomField>
    <fullName>Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync</label>
    <type>Checkbox</type>
</CustomField>