salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TAMEmail__c.field-meta.xml
<CustomField>
    <fullName>TAMEmail__c</fullName>
    <label>TAM email</label>
    <type>Email</type>
</CustomField>