salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TechnicalAccountManager__c.field-meta.xml
<CustomField>
    <fullName>TechnicalAccountManager__c</fullName>
    <formula>Account.Technical_Account_Manager__r.FirstName &amp; &quot; &quot;&amp;  Account.Technical_Account_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Technical Account Manager</label>
    <type>Text</type>
</CustomField>