salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TempCongaUpdate__c.field-meta.xml
<CustomField>
    <fullName>TempCongaUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TEMP CONGA UPDATE</label>
    <type>Checkbox</type>
</CustomField>