salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <formula>if( CustomerEscalationTemperature__c = &#39;COLD&#39;, IMAGE(&#39;/resource/CustomerEscalationCOLD&#39;, &quot;COLD&quot;, 25, 40), if( CustomerEscalationTemperature__c = &#39;HOT&#39;, IMAGE(&#39;/resource/CustomerEscalationHOT&#39;, &quot;HOT&quot;, 25, 40),if( CustomerEscalationTemperature__c = &#39;WARM&#39;, IMAGE(&#39;/resource/CustomerEscalationWARM&#39;, &quot;WARM&quot;, 25, 40),null)))</formula>
    <label>Temperature</label>
    <type>Text</type>
</CustomField>