salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <formula>TEXT ( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test</label>
    <type>Text</type>
</CustomField>