salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/ThenatureofthisInquiry__c.field-meta.xml
<CustomField>
    <fullName>ThenatureofthisInquiry__c</fullName>
    <label>The nature of this Inquiry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General question</fullName>
                <default>true</default>
                <label>General question</label>
            </value>
            <value>
                <fullName>Not working as expected</fullName>
            </value>
            <value>
                <fullName>This is an enhancement request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>