salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frontline</fullName>
                <default>true</default>
                <label>Frontline</label>
            </value>
            <value>
                <fullName>Backline</fullName>
            </value>
            <value>
                <fullName>Sustaining</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>