salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeSinceLastCommunication__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceLastCommunication__c</fullName>
    <formula>(NOW() - LastCommunicationDateTime__c) *1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Communication</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>