salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeSinceLastCommunicationHours__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceLastCommunicationHours__c</fullName>
    <formula>TimeSinceLastCommunication__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Communication (Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>