salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeSinceLastModifieddays__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceLastModifieddays__c</fullName>
    <formula>TimeSinceLastModifiedHours__c / 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Modified (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>