salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeSinceLastModifiedHours__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceLastModifiedHours__c</fullName>
    <formula>TimeSinceLastModifiedMins__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Modified (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>