salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeSinceLastModifiedMins__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceLastModifiedMins__c</fullName>
    <formula>(CurrentDateTime__c - TLMD__c) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Modified (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>