salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeSinceOpenedDays__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceOpenedDays__c</fullName>
    <formula>(NOW() - CreatedDate)</formula>
    <label>Time Since Opened (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>