salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeSinceOpenMins__c.field-meta.xml
<CustomField>
    <fullName>TimeSinceOpenMins__c</fullName>
    <formula>(NOW() - CreatedDate) * 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Open (mins)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>