salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeToAssignmentMinutes__c.field-meta.xml
<CustomField>
    <fullName>TimeToAssignmentMinutes__c</fullName>
    <formula>CEILING((AssignmentTime__c - CreatedDate)*1440)</formula>
    <label>Time to Assignment (minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>