salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeToClose__c.field-meta.xml
<CustomField>
    <fullName>TimeToClose__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>