salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeToInitalResponseMinutes__c.field-meta.xml
<CustomField>
    <fullName>TimeToInitalResponseMinutes__c</fullName>
    <formula>CEILING(( InitialResponse__c - CreatedDate)*1440)</formula>
    <label>Time to Inital Response (minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>