salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeZone__c.field-meta.xml
<CustomField>
    <fullName>TimeZone__c</fullName>
    <inlineHelpText>This is the timezone you would like to receive support in and receive update cadence within these business hours</inlineHelpText>
    <label>Timezone to Receive Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</fullName>
            </value>
            <value>
                <fullName>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</fullName>
            </value>
            <value>
                <fullName>(GMT+01:00) British Summer Time (Europe/London)</fullName>
            </value>
            <value>
                <fullName>(GMT-04:00) Eastern Daylight Time (America/New_York)</fullName>
            </value>
            <value>
                <fullName>(GMT-05:00) Central Daylight Time (America/Mexico_City)</fullName>
            </value>
            <value>
                <fullName>(GMT-07:00) Pacific Daylight Time (America/Los_Angeles)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>