salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TimeZoneUpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>TimeZoneUpdatedTime__c</fullName>
    <description>This field is only for development purpose and back-end logic. This field should not exposed on UI or permission added to users other than admin</description>
    <label>TimeZone Updated Time</label>
    <type>DateTime</type>
</CustomField>