salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TLMD__c.field-meta.xml
<CustomField>
    <fullName>TLMD__c</fullName>
    <defaultValue>Now()</defaultValue>
    <description>custom field to preserve true last modified date time of the case object</description>
    <label>True Last Modified Date</label>
    <type>DateTime</type>
</CustomField>