salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/TrueLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>TrueLastModifiedDate__c</fullName>
    <label>True Last Modified Date</label>
    <type>DateTime</type>
</CustomField>