salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/UNITED2013__c.field-meta.xml
<CustomField>
    <fullName>UNITED2013__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UNITED 2013</label>
    <type>Checkbox</type>
</CustomField>