salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/UNITED2013AdditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>UNITED2013AdditionalInfo__c</fullName>
    <label>UNITED 2013 Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>