salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/fields/WhatImprovementsNeeded__c.field-meta.xml
<CustomField>
    <fullName>WhatImprovementsNeeded__c</fullName>
    <label>What improvements needed?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>