salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/recordTypes/CSE_Engagement.recordType-meta.xml
<RecordType>
    <fullName>CSE_Engagement</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>CSE Engagement</label>
</RecordType>