salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/recordTypes/CustomerSuccess.recordType-meta.xml
<RecordType>
    <fullName>CustomerSuccess</fullName>
    <active>true</active>
    <businessProcess>Customer Success Representatives</businessProcess>
    <label>Customer Success</label>
</RecordType>