salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/recordTypes/EmailCase.recordType-meta.xml
<RecordType>
    <fullName>EmailCase</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <label>Email Case</label>
</RecordType>