salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Case/recordTypes/InternalCase.recordType-meta.xml
<RecordType>
    <fullName>InternalCase</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process %28engineer%29</businessProcess>
    <description>To be used for internal Cases.</description>
    <label>Internal Case</label>
</RecordType>